[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/portal_chaos.png" type="Texture" id=1]
[ext_resource path="res://Sprites/eye_chaos.png" type="Texture" id=2]
[ext_resource path="res://portal.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("portal_circle:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.001, 0.001 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "portal"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("portal_circle:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 90.0, 135.0, 180.0, 225.0, 270.0, 315.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("portal_circle/eye:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[node name="portal" type="Node2D"]
script = ExtResource( 3 )

[node name="portal_circle" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="eye" type="Sprite" parent="portal_circle"]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )
anims/portal = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer_dead" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer_die" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer_rotation" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_dead" to="." method="_on_Timer_dead_timeout"]
[connection signal="timeout" from="Timer_die" to="." method="_on_Timer_die_timeout"]
[connection signal="timeout" from="Timer_rotation" to="." method="_on_Timer_rotation_timeout"]
